--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest 
     xmlns:android="http://schemas.android.com/apk/res/android"
-	package="nl.sense_os.wk" 
-	android:versionName="1.2 (Cruijff)" android:versionCode="4">
+	package="nl.sense_os.ek2012" 
+	android:versionName="1.0.3 (Davids)" android:versionCode="20120601">
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    
+    <uses-sdk android:minSdkVersion="4" />
+    
 	<application 
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher_sense" android:theme="@android:style/Theme.Light">
         <activity 
-            android:name=".Wk" 
+            android:name="nl.sense_os.wk.Wk" 
             android:label="@string/app_name"
             android:configChanges="orientation"
             >
@@ -47,8 +53,4 @@
             </intent-filter>
         </receiver>
 	</application>
-	<uses-sdk android:minSdkVersion="4" />
-
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 </manifest> 
