--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,56 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-	package="nl.sense_os.ek2012" 
-	android:versionName="1.0.3 (Davids)" android:versionCode="20120601">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="nl.sense_os.wk"
+    android:versionCode="20120601"
+    android:versionName="1.0.3 (Davids)" >
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    
-    <uses-sdk android:minSdkVersion="4" />
-    
-	<application 
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher_sense" android:theme="@android:style/Theme.Light">
-        <activity 
-            android:name="nl.sense_os.wk.Wk" 
-            android:label="@string/app_name"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="11" />
+
+    <application
+        android:icon="@drawable/ic_launcher_sense"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".Wk"
             android:configChanges="orientation"
-            >
+            android:label="@string/standings_label" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name=".Prediction" 
+        <activity
+            android:name=".Prediction"
             android:configChanges="orientation"
-            >
-            <intent-filter>
-                <action android:name="nl.sense_os.wk.Prediction" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            android:label="@string/prediction_label" >
         </activity>
-        <activity 
-            android:name=".Standings" 
-            android:configChanges="orientation"
-            >
-            <intent-filter>
-                <action android:name="nl.sense_os.wk.Standings" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <receiver 
-            android:name=".WkSyncer" 
-            >
+
+        <receiver android:name=".WkSyncer" >
             <intent-filter>
                 <action android:name="nl.sense_os.wk.Sync" />
+
                 <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>            
+            </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
-                <category android:name="android.intent.category.HOME"></category>
+                <action android:name="android.intent.action.BOOT_COMPLETED" >
+                </action>
+
+                <category android:name="android.intent.category.HOME" >
+                </category>
             </intent-filter>
         </receiver>
-	</application>
-</manifest> 
+    </application>
+
+</manifest>
