--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.sense_os.wk"
     android:versionCode="20120601"
-    android:versionName="1.0.3 (Davids)" >
+    android:versionName="Edgar Davids" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,9 +13,9 @@
 
     <application
         android:icon="@drawable/ic_launcher_sense"
-        android:label="@string/app_name" >
+        android:label="@string/app_label" >
         <activity
-            android:name=".Wk"
+            android:name=".Standings"
             android:configChanges="orientation"
             android:label="@string/standings_label" >
             <intent-filter>
