- fixed server URL - fixed joker saving - version eljero elia

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.almende.footballpool"
-    android:versionCode="20120603"
-    android:versionName="Edgar Davids" >
+    android:versionCode="20120608"
+    android:versionName="Eljero Elia" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
